# ROB10

./: .gitignore  .~lock.Commands.odt#  CMakeLists.txt  Commands.odt  README.md
include/turtlebot3_master/: turtlebot3_drive2.h
launch/: turtlebot3_master_world1_singleBot.launch  turtlebot3_simulation2.launch
move_base2/: CMakeLists.txt
move_base2/src/: move_base.cpp  move_base_node.cpp
obstacle-avoidance-turtlebot/launch/: Karolina.launch  naive_obs_avoid.launch  obs_aK.launch
obstacle-avoidance-turtlebot/src/: a.out  cutcircle.py  cutshape.py  masters_avodiance.py  myProgram  naive_obs_avoid_tb3.py  potentialfields.cpp  scanedata.py  sound.cpp
rviz/: multi_turtlebot3_slam.rviz
teleop_twist_joy2/: CMakeLists.txt  package.xml
teleop_twist_joy2/config/: ps3-holonomic.config.yaml  ps3.config.yaml
teleop_twist_joy2/include/teleop_twist_joy2/: teleop_twist_joy2.h
teleop_twist_joy2/launch/: teleop.launch
teleop_twist_joy2/src/: teleop_node.cpp  teleop_ps3.cpp  teleop_twist_joy2.cpp
turtlebot3_master/: CMakeLists.txt  package.xml
turtlebot3_master/config/: ps3.config.yaml
turtlebot3_master/include/turtlebot3_master/: turtlebot3_automation.h  turtlebot3_obstacleidentifier.h  turtlebot3_supervisor.h
turtlebot3_master/launch/: multi_map_merge.launch  multi_turtlebot3.launch  turtlebot3_empty_world.launch  turtlebot3_master_world1.launch  turtlebot3_master_world1_singleBot.launch  turtlebot3_master_world1_singleBotKeyboard.launch  turtlebot3_start.launch  turtlebot3_teleop_key.launch
turtlebot3_master/maps/: supermap1.pgm  supermap1.yaml
turtlebot3_master/msg/: ScanData.msg  Super.msg
turtlebot3_master/rviz/: multi_turtlebot3_slam.rviz
turtlebot3_master/src/: teleop_node.cpp  turtlebot3_automation.cpp  turtlebot3_drive2BU1.cpp  turtlebot3_obstacleidentifier.cpp  turtlebot3_supervisor.cpp  turtlebot3_teleop_key
turtlebot3_navigation2/: CMakeLists.txt  package.xml
turtlebot3_navigation2/launch/: move_base.launch  turtlebot3_navigation.launch
turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_simulation2.launch  turtlebot3_world2.launch
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_master_world1/: model-1_4.sdf  model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_master_world2/: ModelWithBoxesVisible.sdf  model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_master_world2BU/: BU.sdf  model.sdf  modelBUUUUU.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_world/: model-1_4.sdf  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/src/: turtlebot3_drive2.cpp
turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_master_world1.world  turtlebot3_master_world2.world
